--- a/src/global/core/shared/inherited.scss
+++ b/src/global/core/shared/inherited.scss
@@ -14,6 +14,11 @@ html {
   color: var(--sbb-font-default-color);
 }
 
+// TODO: Remove if webkit bug is resolved: https://bugs.webkit.org/show_bug.cgi?id=223814
+::placeholder {
+  color: var(--sbb-color-metal-default);
+}
+
 .sbb-text-xxs {
   @include text-xxs--regular;
 }
