refactor: remove focus-visible plugin

--- a/src/components/sbb-accordion-item/sbb-accordion-item.scss
+++ b/src/components/sbb-accordion-item/sbb-accordion-item.scss
@@ -44,9 +44,7 @@
       var(--header-transition-timing-function),
     color var(--header-transition-duration) var(--header-transition-timing-function);
 
-  :host(.focus-visible) & {
-    @include focusOutline;
-  }
+  // TODO: add focus styles
 }
 
 .accordion-item__heading {
