--- a/src/global/styles/mixins.scss
+++ b/src/global/styles/mixins.scss
@@ -3,6 +3,7 @@
 @import 'mixins/mixins_buttons.scss';
 @import 'mixins/mixins_card.scss';
 @import 'mixins/mixins_grid_layout.scss';
+@import 'mixins/mixins_list.scss';
 @import 'mixins/mixins_panel.scss';
 @import 'mixins/mixins_scrollbar.scss';
 @import 'mixins/mixins_shadows.scss';
@@ -10,13 +11,6 @@
 @import 'mixins/mixins_typo.scss';
 
 @import 'mixins/mixins_dev_and_debug.scss';
-
-@mixin list-reset {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-size: inherit;
-}
 
 @mixin ellipsis() {
   overflow: hidden;
