feat: add close button

--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -113,6 +113,12 @@
   }
 }
 
+.sbb-dialog__close {
+  position: absolute;
+  top: var(--sbb-spacing-responsive-xs);
+  right: var(--sbb-spacing-responsive-xs);
+}
+
 @keyframes open {
   from {
     visibility: hidden;
