--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -6,26 +6,15 @@
   --sbb-navigation-position: fixed;
   --sbb-navigation-animation-duration: var(--sbb-animation-duration-3x);
   --sbb-navigation-animation-easing: ease;
-  --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-4x);
+  --sbb-navigation-padding-inline: var(--sbb-layout-base-offset-responsive)
+    var(--sbb-layout-base-offset-responsive);
   --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-l);
   --sbb-navigation-width: 100vw;
   --sbb-navigation-backdrop-color: transparent;
 
-  @include mq($from: micro) {
-    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-5x);
-  }
-
-  @include mq($from: small) {
-    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-12x);
-  }
-
-  @include mq($from: medium) {
-    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-14x);
-  }
-
   @include mq($from: large) {
     --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-xl);
-    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-16x);
+    --sbb-navigation-padding-inline: var(--sbb-layout-base-offset-responsive) 0;
     --sbb-navigation-position: absolute;
     --sbb-navigation-width: #{px-to-rem-build(496)};
 
@@ -47,12 +36,10 @@
   }
 
   @include mq($from: wide) {
-    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-18x);
     --sbb-navigation-width: #{px-to-rem-build(432)};
   }
 
   @include mq($from: ultra) {
-    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-30x);
     --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-xxl);
     --sbb-navigation-width: #{px-to-rem-build(473)};
   }
