--- a/src/components/sbb-navigation-list/sbb-navigation-list.scss
+++ b/src/components/sbb-navigation-list/sbb-navigation-list.scss
@@ -3,9 +3,17 @@
 @include host-component-properties;
 
 :host {
-  --some-color-var: var(--color-black-default);
-}
+  --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-xxl);
+  --sbb-navigation-padding-inline-start: var(--sbb-spacing-fixed-6x);
+  --sbb-navigation-gap: var(--sbb-spacing-responsive-xs);
 
-.some-class {
-  color: var(--some-color-var);
+  @include mq($from: large) {
+    --sbb-navigation-padding-block-start: var(--sbb-spacing-fixed-1x);
+  }
+
+  padding-block-start: var(--sbb-navigation-padding-block-start);
+  padding-inline-start: var(--sbb-navigation-padding-inline-start);
+  display: flex;
+  flex-direction: column;
+  gap: var(--sbb-navigation-gap);
 }
