--- a/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
+++ b/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
@@ -3,9 +3,41 @@
 @include host-component-properties;
 
 :host {
-  --some-color-var: var(--color-black-default);
+  @include title-4;
+
+  --sbb-navigation-marker-position-x: 0;
+  --sbb-navigation-marker-position-y: 0;
+  --sbb-navigation-marker-width: #{px-to-rem-build(17)};
+  --sbb-navigation-marker-height: var(--sbb-border-width-1x);
+  --sbb-navigation-marker-margin-block: calc(0.5em + var(--sbb-navigation-marker-height) * 2);
+  --sbb-navigation-action-margin-block-end: var(--sbb-spacing-responsive-xs);
+
+  position: relative;
+  padding-inline-start: var(--sbb-spacing-fixed-6x);
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: var(--sbb-navigation-marker-position-x);
+    top: var(--sbb-navigation-marker-position-y);
+    width: var(--sbb-navigation-marker-width);
+    height: var(--sbb-navigation-marker-height);
+    background: var(--sbb-color-storm-default);
+    margin-block: var(--sbb-navigation-marker-margin-block);
+    transition: top var(--sbb-animation-duration-6x) ease 0s;
+  }
 }
 
-.some-class {
-  color: var(--some-color-var);
+:host([size='s']) {
+  @include text-xxs--bold;
+
+  --sbb-navigation-marker-width: #{px-to-rem-build(8)};
+  --sbb-navigation-marker-position-x: calc(
+    var(--sbb-navigation-marker-margin-block) + #{px-to-rem-build(6)}
+  );
+  --sbb-navigation-action-margin-block-end: var(--sbb-spacing-fixed-2x);
+}
+
+::slotted(sbb-navigation-action) {
+  margin-block-end: var(--sbb-navigation-action-margin-block-end);
 }
