--- a/src/components/sbb-navigation-action/sbb-navigation-action.scss
+++ b/src/components/sbb-navigation-action/sbb-navigation-action.scss
@@ -30,6 +30,8 @@
   -webkit-tap-highlight-color: transparent;
   margin-inline-start: var(--sbb-navigation-margin-inline-start);
   transition: color var(--sbb-animation-duration-3x) ease;
+  word-break: break-all;
+  text-align: left;
 
   :host([size='m']) .sbb-navigation-action & {
     @include text-s--bold;
