--- a/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
+++ b/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
@@ -48,6 +48,9 @@
     var(--sbb-navigation-marker-padding-inline-start) - var(--sbb-spacing-fixed-2x)
   );
   --sbb-navigation-marker-width: #{px-to-rem-build(8)};
+  --sbb-navigation-marker-padding-inline-start: calc(
+    var(--sbb-spacing-fixed-6x) + var(--sbb-spacing-fixed-1x)
+  );
   --sbb-navigation-marker-margin-block: calc(
     var(--sbb-font-size-text-xxs) * var(--sbb-typo-line-height-body-text) / 2 -
       var(--sbb-border-width-1x) / 2
