feat: add title margins
BREAKING CHANGE:
Title mixins and `<sbb-title>`-component now have a default margin block to meet design specs.
In the mixin you can opt out by passing the flag $exclude-spacing
 with true (e.g. `@include text-1($exclude-spacing: true)`).
In the `sbb-title` component you can just set any margin from outside
 on the `<sbb-title>` itself, e.g. `<sbb-title style='margin:0'>`.

--- a/src/components/sbb-card-product/sbb-card-product.scss
+++ b/src/components/sbb-card-product/sbb-card-product.scss
@@ -133,7 +133,7 @@
 }
 
 .card-product__lead {
-  @include sbb.title-6;
+  @include sbb.title-6(true);
 }
 
 .card-product__category,
@@ -142,4 +142,8 @@
 
   margin: 0;
   color: var(--sbb-color-granite-default);
+}
+
+::slotted(sbb-title) {
+  margin: 0; // Overwrite sbb-title default margin
 }
