--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -69,6 +69,8 @@
 
 .sbb-teaser__lead {
   @include sbb.clamp-lines($lines: 2);
+
+  margin: 0; // Overwrite sbb-title default margin
 }
 
 .sbb-teaser__description {
