--- a/src/components/sbb-alert/sbb-alert.scss
+++ b/src/components/sbb-alert/sbb-alert.scss
@@ -76,6 +76,10 @@
   flex: 1;
 }
 
+.sbb-alert__title {
+  margin: 0; // Overwrite sbb-title default margin
+}
+
 .sbb-alert__close-button-wrapper {
   display: flex;
   justify-content: flex-end;
