--- a/src/components/sbb-link-list/sbb-link-list.scss
+++ b/src/components/sbb-link-list/sbb-link-list.scss
@@ -28,6 +28,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   gap: var(--sbb-spacing-fixed-3x);
 }
 
+.sbb-link-list__title {
+  margin: 0; // Overwrite sbb-title default margin
+}
+
 .sbb-link-list {
   @include sbb.list-reset;
 
