--- a/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
+++ b/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
@@ -14,7 +14,7 @@
     var(--sbb-font-size-title-4) * var(--sbb-typo-line-height-titles) / 2 -
       var(--sbb-border-width-1x) / 2
   );
-  --sbb-navigation-action-margin-block-end: var(--sbb-spacing-responsive-xs);
+  --sbb-navigation-action-gap: var(--sbb-spacing-responsive-xs);
 
   position: relative;
   padding-inline-start: var(--sbb-navigation-marker-padding-inline-start);
@@ -55,14 +55,13 @@
     var(--sbb-font-size-text-xxs) * var(--sbb-typo-line-height-body-text) / 2 -
       var(--sbb-border-width-1x) / 2
   );
-  --sbb-navigation-action-margin-block-end: var(--sbb-spacing-fixed-2x);
-}
-
-/* stylelint-disable-next-line plugin/stylelint-bem-namics */
-::slotted(sbb-navigation-action:not(:last-child)) {
-  margin-block-end: var(--sbb-navigation-action-margin-block-end);
+  --sbb-navigation-action-gap: var(--sbb-spacing-fixed-2x);
 }
 
 .sbb-navigation-marker__content {
   @include list-reset;
+
+  display: flex;
+  flex-direction: column;
+  gap: var(--sbb-navigation-action-gap);
 }
