fix: COMMENT HAS TO BE ABOVE!

--- a/src/components/sbb-alert/sbb-alert.scss
+++ b/src/components/sbb-alert/sbb-alert.scss
@@ -77,7 +77,8 @@
 }
 
 .sbb-alert__title {
-  margin: 0; // Overwrite sbb-title default margin
+  // Overwrite sbb-title default margin
+  margin: 0;
 }
 
 .sbb-alert__close-button-wrapper {
