--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -70,7 +70,8 @@
 .sbb-teaser__lead {
   @include sbb.clamp-lines($lines: 2);
 
-  margin: 0; // Overwrite sbb-title default margin
+  // Overwrite sbb-title default margin
+  margin: 0;
 }
 
 .sbb-teaser__description {
