--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -127,6 +127,8 @@
   @include sbb.screen-reader-only;
 }
 
-::slotted(sbb-title:first-child) {
+// We remove upper margin from all titles
+// as we do not expect multiple titles to be used inside a card.
+.sbb-card__content ::slotted(sbb-title) {
   margin-block-start: 0;
 }
