fix: navigation focus trapping

--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -108,7 +108,11 @@
   }
 }
 
-.sbb-dialog__close {
+.sbb-navigation__wrapper {
+  outline: none;
+}
+
+.sbb-navigation__close {
   position: absolute;
   top: var(--sbb-spacing-responsive-xs);
   right: var(--sbb-spacing-responsive-xs);
