feat: enable boarding option

--- a/src/components/sbb-timetable-row/sbb-timetable-row.scss
+++ b/src/components/sbb-timetable-row/sbb-timetable-row.scss
@@ -95,6 +95,10 @@ li {
   > span {
     align-self: center;
   }
+
+  :only-child {
+    margin-inline-start: auto;
+  }
 }
 
 .sbb-timetable__row-occupancy {
