feat: add marker high-contrast mode style

--- a/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
+++ b/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
@@ -35,6 +35,10 @@
       timing-function: ease;
       property: opacity, top;
     }
+
+    @include ifForcedColors {
+      background: CanvasText;
+    }
   }
 }
 
